--- a/BazarakFron/index.html
+++ b/BazarakFron/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>bazarakfron</title>
   </head>
-  <body style="background-color:#F4F6F8;">
+  <body style="background-color:#E2FDFF;">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
